Upgrade visualizzazione
Aggiunto del css e aggiunta la possibilià di saltare la pagina di configurazione di uno schema di sicurezza